; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_util.c_verify_status_code.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_util.c_verify_status_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@codes = common dso_local global i32** null, align 8
@.str = private unnamed_addr constant [8 x i8] c"Unknown\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @verify_status_code(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %29, %1
  %6 = load i64, i64* %4, align 8
  %7 = load i32**, i32*** @codes, align 8
  %8 = call i64 @ARRAY_SIZE(i32** %7)
  %9 = icmp ult i64 %6, %8
  br i1 %9, label %10, label %32

10:                                               ; preds = %5
  %11 = load i8*, i8** %3, align 8
  %12 = load i32**, i32*** @codes, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds i32*, i32** %12, i64 %13
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32* @strstr(i8* %11, i32 %17)
  %19 = icmp ne i32* %18, null
  br i1 %19, label %20, label %28

20:                                               ; preds = %10
  %21 = load i32**, i32*** @codes, align 8
  %22 = load i64, i64* %4, align 8
  %23 = getelementptr inbounds i32*, i32** %21, i64 %22
  %24 = load i32*, i32** %23, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 1
  %26 = load i32, i32* %25, align 4
  %27 = call i8* @_(i32 %26)
  store i8* %27, i8** %2, align 8
  br label %33

28:                                               ; preds = %10
  br label %29

29:                                               ; preds = %28
  %30 = load i64, i64* %4, align 8
  %31 = add i64 %30, 1
  store i64 %31, i64* %4, align 8
  br label %5

32:                                               ; preds = %5
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %33

33:                                               ; preds = %32, %20
  %34 = load i8*, i8** %2, align 8
  ret i8* %34
}

declare dso_local i64 @ARRAY_SIZE(i32**) #1

declare dso_local i32* @strstr(i8*, i32) #1

declare dso_local i8* @_(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
